Feat: Enhance product creation and update logic with stock calculation and error handling